--- a/src/css/C002.css
+++ b/src/css/C002.css
@@ -1,3 +1,24 @@
 * {
-	font-family: hell;
+    font-family: hell;
+}
+
+body {
+    margin: 0;
+    overflow: hidden;
+    display: flex;
+    height: 100vh;
+}
+
+.pixel {
+    width: 10px;
+    height: 10px;
+    background-color: black;
+    position: absolute;
+    transition: transform 0.2s;
+}
+
+.pixel-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
