--- a/src/css/C002.css
+++ b/src/css/C002.css
@@ -5,7 +5,6 @@
 body {
 	margin: 0;
 	overflow: hidden;
-	display: flex;
 	height: 100vh;
 }
 
@@ -21,4 +20,6 @@ body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	padding: 2em;
+	margin: 0;
 }
